--- a/crm-backend/package.json
+++ b/crm-backend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
+    "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
