--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: cd crm-frontend
-           docker build . --file Dockerfile --tag crm-frontend:$(date +%s)
+      run: cd crm-frontend && docker build . --file Dockerfile --tag crm-frontend:$(date +%s)
            
