--- a/crm-backend/package.json
+++ b/crm-backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
