--- a/crm-backend/.env.sample
+++ b/crm-backend/.env.sample
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb://localhost/ticket_crm_system
-JWT_ACCESS_SECRETE =lwsjerjkjkhashfkjasdfajksh
-JWT_REFRESH_SECRETE = dlsgjkldhsgkjhskghkadshgkjhdkghjsdhg
+JWT_ACCESS_SECRET =lwsjerjkjkhashfkjasdfajksh
+JWT_REFRESH_SECRET = dlsgjkldhsgkjhskghkadshgkjhdkghjsdhg
 REDIS_URL= redis://localhost:6379
