--- a/crm-frontend/Dockerfile
+++ b/crm-frontend/Dockerfile
@@ -10,9 +10,7 @@ COPY package*.json ./
 
 # Install dependencies
 RUN npm install
-
-
 # copy local files to app folder
 COPY . .
 
-CMD ["npm","start"]
+CMD ["node","app.js"]
