--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-redux": "^7.2.6",
+    "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
@@ -43,7 +44,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.9.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/eslint-plugin": "^7.16.5",
+    "eslint": "^8.10.0",
     "eslint-config-defaults": "^9.0.0"
   }
 }
