--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "fontawesome": "^5.6.3",
+    "mongoose-auto-increment": "^5.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
