--- a/crm-backend/package.json
+++ b/crm-backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.1.8",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "redis": "^4.0.3"
   }
