--- a/crm-backend/.env.sample
+++ b/crm-backend/.env.sample
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost/ticket_crm_system
+MONGO_URI=mongodb+srv://capstone:Y0uD3pl0y@cluster0.zncig.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 JWT_ACCESS_SECRET =lwsjerjkjkhashfkjasdfajksh
 JWT_REFRESH_SECRET = dlsgjkldhsgkjhskghkadshgkjhdkghjsdhg
 REDIS_URL= redis://localhost:6379
