--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "env-cmd": "^10.1.0",
     "fontawesome": "^5.6.3",
     "mongoose-auto-increment": "^5.0.1",
     "prop-types": "^15.8.1",
@@ -27,10 +28,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:production": "env-cmd -f .env.production react-scripts start"
   },
   "browserslist": {
     "production": [
@@ -49,5 +52,9 @@
     "@babel/eslint-plugin": "^7.16.5",
     "eslint": "^8.10.0",
     "eslint-config-defaults": "^9.0.0"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
