--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "env-cmd": "^10.1.0",
     "fontawesome": "^5.6.3",
     "mongoose-auto-increment": "^5.0.1",
