--- a/crm-backend/package.json
+++ b/crm-backend/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
-    "redis": "^4.0.3"
+    "redis": "^4.0.3",
+    "socket.io": "^4.5.1"
   }
 }
