--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-notification-timeline": "0.0.9",
     "react-redux": "^7.2.6",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
