--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "env-cmd": "^10.1.0",
+    "export-to-csv": "^0.2.1",
     "fontawesome": "^5.6.3",
     "mongoose-auto-increment": "^5.0.1",
     "prop-types": "^15.8.1",
