--- a/crm-backend/package.json
+++ b/crm-backend/package.json
@@ -24,6 +24,8 @@
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "redis": "^4.0.3",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.5.0"
   }
 }
