--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -26,10 +26,11 @@
     "react-redux": "^7.2.6",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "socket.io-client": "^4.5.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
