--- a/crm-backend/Dockerfile
+++ b/crm-backend/Dockerfile
@@ -2,8 +2,6 @@
 
 FROM node:14.15.3-alpine3.12
 
-ARG NODE_ENV=development
-
 # Create App Directory
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -11,10 +9,11 @@ WORKDIR /usr/src/app
 # Install Dependencies
 COPY package*.json ./
 
-RUN npm install
+RUN npm install 
 
-# Copy app source code
 COPY . .
+
+EXPOSE 5000
 
 CMD ["npm","start"]
 
