Add production docker support and bug fixes related to it

--- a/crm-frontend/Dockerfile
+++ b/crm-frontend/Dockerfile
@@ -16,11 +16,11 @@ RUN npm install
 COPY . .
 
 ARG REACT_APP_BACKEND_SERVER_IP
-ENV REACT_APP_BACKEND_SERVER_IP = 'localhost'
+ENV REACT_APP_BACKEND_SERVER_IP 'localhost'
 
 
 ARG REACT_APP_PORT
-ENV REACT_APP_PORT = 5000
+ENV REACT_APP_PORT 5000
 
 
 EXPOSE 3000
