--- a/crm-frontend/Dockerfile.production
+++ b/crm-frontend/Dockerfile.production
@@ -15,11 +15,11 @@ RUN npm install
 COPY . .
 
 ARG REACT_APP_BACKEND_SERVER_IP
-ENV REACT_APP_BACKEND_SERVER_IP = ${REACT_APP_BACKEND_SERVER_IP}
+ENV REACT_APP_BACKEND_SERVER_IP ${REACT_APP_BACKEND_SERVER_IP}
 
 
 ARG REACT_APP_PORT
-ENV REACT_APP_PORT = ${REACT_APP_PORT}
+ENV REACT_APP_PORT ${REACT_APP_PORT}
 
 RUN npm run-script build
 
