--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,8 +36,12 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ticket-crm
-        IMAGE_TAG: production_image
+        IMAGE_TAG: production
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-           
+        echo 'ECR $ECR_REGISTRY'
+        make build-production
+        docker push react-app-production:production
+        docker push api-server
+        docker push redis
+        
+       
