--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,10 +36,13 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ticket-crm
-        IMAGE_TAG: production
+        IMAGE_TAG: 1
       run: |
-        echo 'ECR $ECR_REGISTRY'
-        make build-production
+       # Build a docker container and push it to ECR 
+       ENV=production docker-compose -f docker-compose-production.yml build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+       echo "Pushing image to ECR..."
+       ENV=production docker-compose -f docker-compose-production.yml build $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+       echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
     
         
        
