--- a/crm-backend/config/production.env
+++ b/crm-backend/config/production.env
@@ -2,5 +2,5 @@ MONGO_URI=mongodb+srv://capstone:Y0uD3pl0y@cluster0.zncig.mongodb.net/ticket_crm
 JWT_ACCESS_SECRET=lwsjerjkjkhashfkjasdfajksh
 JWT_REFRESH_SECRET=dlsgjkldhsgkjhskghkadshgkjhdkghjsdhg
 REDIS_URL= redis://redis:6379
-REACT_APP_FRONTEND_SERVER_IP='107.23.73.19'
+REACT_APP_FRONTEND_SERVER_IP='ticket-crm-capstone.me'
 REACT_FRONTEND_APP_PORT='3000'
