--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,40 +17,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-    - name: Check out code
-      uses: actions/checkout@v2
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build, tag, and push image to Amazon ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ticket-crm
-        IMAGE_TAG: 1
-      run: |
-        # Build a docker container 
-        ENV=Production
-        cd crm-frontend 
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:react_app_$IMAGE_TAG .
-        cd ../crm-backend
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:api_server_$IMAGE_TAG .
-        # Pushing a docker container
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:react_app_$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:api_server_$IMAGE_TAG
-        
-         
-
-
-    
-        
-       
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_KEY }}
+          name: id_rsa
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
+      - name: rsync over ssh
+        run: ./deploy_to_aws.sh
