--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,6 @@ jobs:
           name: id_rsa
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: rsync over ssh
-        run: ./deploy_to_aws.sh
+        run: |
+          chmod +x ./deploy_to_aws.sh
+          ./deploy_to_aws.sh
